--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "comp-lib-mui5-sample",
   "version": "0.1.0",
   "private": true,
+  "author": "Vidura Adikari",
+  "license": "MIT",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
@@ -15,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "buildRoolUp": "rm -rf dist && rollup -c",
+    "package": "npm pack"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +46,9 @@
     ]
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -44,6 +57,10 @@
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
     "react-scripts": "^5.0.0",
+    "rollup-plugin-dts": "^4.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   }
